# fennel-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  env-start.sh  fennel-cli-terraform-start.sh  fennel-nginx-conf-cli.sh  fennel.py  main.tf  requirements.txt
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml  workflow.yml
benches/: crypto_benchmark.rs
fennel_cli/: cmdparse.py
requests/: api.http
scripts/: build-release.sh  build-run.sh  build-test.sh  setup.sh
src/: aes_tools.rs  fennel.rs  main.rs  rsa_tools.rs
src/aes_tools/: aes_bench.rs  aes_tests.rs  mod.rs
src/api/: mod.rs  tests.rs  types.rs
src/client/: mod.rs  tests.rs
src/command/: mod.rs
src/crypto/: aes.py  rsa.py
src/database/: bench.rs  mod.rs  tests.rs
src/fennel/: fennel_bench.rs  fennel_tests.rs  mod.rs
src/fennel_rpc/: mod.rs  service.rs  traits.rs  types.rs
src/ipfs/: command.rs  main.rs  mod.rs
src/rsa_tools/: bench.rs  mod.rs  rsa_bench.rs  rsa_tests.rs  tests.rs
src/wf/: README.md  command.rs  main.rs
