[package]
name = "fennel-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }

aes = "0.7.5"
rsa = "0.5.0"
bytes = "1.1.0"
rand = "0.8.4"
sha3 = "0.10.0"
tokio = { version = "1", features = ["full"] }
slice-of-array = "0.3.1"
rocksdb = "0.17.0"
codec = { version = "2.3.1", package = "parity-scale-codec", features = ["derive"] }
fennel-lib = { git = "https://github.com/fennelLabs/fennel-lib", branch = "master", package = "fennel-lib" }

[dev-dependencies]
once_cell = "1.9.0"