[package]
name = "fennel-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }

aes = "0.7.5"
rsa = "0.5.0"
bytes = "1.1.0"
rand = "0.8.4"
sha3 = "0.10.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
tokio = { version = "1", features = ["full"] }
slice-of-array = "0.3.1"
rocksdb = "0.17.0"
hex = "0.4.3"
x25519-dalek = "2.0.0-pre.1"
codec = { version = "2.3.1", package = "parity-scale-codec", features = ["derive"] }
fennel-lib = { git = "https://github.com/fennelLabs/fennel-lib", branch = "master", package = "fennel-lib" }
futures = "0.3"
sp-keyring = "5.0.0"
subxt = "0.17.0"

[dev-dependencies]
once_cell = "1.9.0"