[package]
name = "fennel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fennel-cli"
path = "src/main.rs"

[[bin]]
name = "fennel-ipfs"
path = "src/ipfs/main.rs"

[[bin]]
name = "fennel-wf"
path = "src/wf/main.rs"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }

anyhow = "1"
aes = "0.7.5"
rsa = "0.5.0"
bytes = "1.1.0"
rand = "0.8.4"
sha3 = "0.10.0"
jsonrpsee = { version = "0.13.0", features = ["full"] }
jsonrpsee-http-server = "0.13.1"
jsonrpsee-http-client = "0.13.1"
jsonrpsee-proc-macros = "0.13.1"
tokio = { version = "1.29", features = ["full"] }
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
x25519-dalek = "2.0.0-pre.1"
codec = { version = "2.3.1", package = "parity-scale-codec", features = ["derive"] }
fennel-lib = { git = "https://github.com/fennelLabs/fennel-lib", branch = "master", package = "fennel-lib" }
whiteflag-rust = { git = "https://github.com/fennelLabs/whiteflag-rust", branch = "main", package = "fennel-whiteflag" }
wf_cli = { git = "https://github.com/fennelLabs/whiteflag-rust", branch = "main", package = "wf_cli" }
futures = "0.3"
sp-keyring = "5.0.0"
serde_json = "1.0.81"

[dev-dependencies]
once_cell = "1.9.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "crypto_benchmark"
harness = false